--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
 
 /* modifications */
 
+html {
+  scroll-behavior: smooth;
+}
+
 #intro{
   font-family:  'Open Sans', 'Helvetica Neue', 'Helvetica', sans-serif;
 }
